working files uploaded

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <title>About | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 </head>
 
 <body>
+<H1>The Psychic Game</H1>
+Guess what letter I'm thinking of.
+  <DIV id="wins">
+   Wins:   
+  </DIV>  
+  <DIV id ="losses">
+    Losses:
+  </DIV>
+  <DIV id="guessesLeft"> 
+    Guesses Left:
+  </DIV>
+  <DIV id="yourGuesses">
+    Your guesses so far:
+  </DIV>
+
+    <script src="assets/javascript/game.js" async></script>
 </body>
 </html>
